# openweather-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
airflow/: Dockerfile  packages.txt  requirements.txt
airflow/dags/: rain_pipeline.py
airflow/rain_pipeline/ingestion/: fetch_current.py
airflow/rain_pipeline/scripts/: utils.py
airflow/rain_pipeline/spark/schemas/: schema_silver_current.py
airflow/rain_pipeline/spark/transforms/: bronze_to_silver_transform.py  silver_to_gold_transform.py
config/: populated_places.json  uk_cities.json
data_engineering/ingestion/: fetch_current.py
de/ingestion/: fetch_current.py
de/spark/schemas/: schema_current.py
de/spark/transforms/: bronze_to_silver_transform.py  silver_to_gold_transform.py  transform_current.py
utils/: openweather.py
