[project]
name = "uk-rain-prediction"
version = "0.1.0"
description = "End-to-end machine learning pipeline for hourly UK rain prediction."
authors = [{name = "Arif A. Othman", email = "arithman34@hotmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
