[tool.poetry]
name = "uk-rain-prediction"
version = "0.1.0"
description = "End-to-end machine learning pipeline for hourly UK rain prediction."
authors = ["Arif A. Othman arithman34@hotmail.com"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "de" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"